tests/NormalTests/paczka1/small_fuzzy/48766685.err
Error in line 8: n1bN S206 5,36
Error in line 7: VAK4PT8OUA S206 83,3
Error in line 4: n1bN S785 85,3
Error in line 14: n1bN S84 28,8
